<resources>
    <string name="app_name">WebCam</string>
    <string name="main_menu">Menu Inicial</string>

    <string name="start_camera_application">Iniciar Aplicação como Câmera</string>
    <string name="camera_application_description">Para iniciar ligue o aparelho no carregador, posicione o aparelho e acione o botão "Iniciar como Cam".</string>
    <string name="btn_start_camera">Iniciar como Cam</string>

    <string name="start_controller_application">Iniciar Aplicação como Controle</string>
    <string name="controller_application_description">Antes de iniciar ligue a aplicação como WebCam em outro dispositivo e  copie o código da WebCam.</string>
    <string name="btn_start_controller">Iniciar como Controle</string>

    <string name="controller_config">Configuração do Controle</string>
    <string name="controller_config_description">Digite o código da WebCam e acione qualquer um dos botões abaixo.</string>
    <string name="controller_config_record">Gravar por 1 minuto</string>
    <string name="controller_config_show_records">Ver gravações</string>
    <string name="controller_config_watch_live">Assistir ao vivo</string>

    <string name="records">Gravações</string>
    <string name="record">Gravação</string>
    <string name="recording">Gravando</string>
    <string name="live">Ao vivo</string>
    <string name="title_activity_web_cam">Web Cam</string>
    <string name="default_cam_id">CAM AS324NH-526</string>

    <string name="confirm_dialog_confirm_btn">Confirmar</string>
    <string name="confirm_dialog_cancel_btn">Cancelar</string>
    <string name="confirm_dialog_title">Atenção</string>


</resources>
